Fix margins on mobile

--- a/packages/frontend/src/style.css
+++ b/packages/frontend/src/style.css
@@ -18,9 +18,9 @@ details summary>* {
 }
 
 .page-frame {
-    margin: 1rem auto;
+    /* margin: 1rem auto;
     margin-top: 1rem;
-    padding: 2rem;
+    padding: 2rem; */
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     border-radius: 5px;
     border: 1px solid rgba(0, 0, 0, 0.1)
